dpkg (1.15.4) UNRELEASED; urgency=low

  * Call _g instead of g_ in dpkg-name.
  * Fix inverted logic when deciding to assume the architecture in dpkg-name
    when the package didn't have such field.

 -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200

dpkg (1.15.3) unstable; urgency=low

  [ Guillem Jover ]
  * Unset TAR_OPTIONS when extracting .deb archives.
  * Use default compressor values in dpkg-source from Dpkg::Source::Compressor.
  * Fix dpkg-scanpackages to properly detect spurious overrides.
  * Rewrite dpkg-name in perl.
  * Do not close already closed files in some error conditions in libdpkg.
  * Use the correct units (KiB) in dpkg-split when referring to partsize.
  * Document in dpkg-statoverride(8) that mode needs to be specified in
    octal. Closes: #534551
  * Mark argument names in dpkg-statoverride.1 in italic.
  * Explicitly pass field argument to Dpkg::ErrorHandling::unknown().
  * Move unknown() from Dpkg::ErrorHandling to Dpkg::Fields.

  [ Raphael Hertzog ]
  * Unset TAR_OPTIONS when creating/extracting tar archives for source
    packages. Closes: #530860
  * Add cleanup of all invalid (master) alternatives in preinst script.
    Closes: #530633, #531611, #532739, #521760
  * Let update-alternatives fix a manual alternative with a dangling symlink
    by switching it to automatic mode. Closes: #529999
  * Add missing paragraph separator in dpkg-buildpackage(1). Thanks to Per
    Andersson <avtobiff@gmail.com>. Closes: #532769
  * Fix english mistake (“as you request” → “as you requested”) in several
    places. Thanks to David Stansby for the patch. Closes: #533171
  * Support tags before symbols in symbols file contained in source packages.
    The first two tags are "optional" (use it to not fail if the symbol might
    disappear from the library without breaking the ABI) and "arch" to
    restrict the set of architectures where the symbol is supposed to exist.