@@ -3,6 +3,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Call _g instead of g_ in dpkg-name.
   * Fix inverted logic when deciding to assume the architecture in dpkg-name
     when the package didn't have such field.
+  * Do not take into account Revision and Package_Revision fields in dpkg-name
+    as they have been handled already by “dpkg-deb -I”.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200
 
